--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>github tutorial</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Create a github repo first.</h1>
@@ -11,7 +12,7 @@
     <code>
         git remote add origin "link to you repo"
     </code>
-    <h1>chnage the master branch name to main using this command:</h1>
+    <h1>change the master branch name to main using this command:</h1>
     <code>
         git branch -m master main
     </code>
