Changed the html on the new branch

--- a/index.html
+++ b/index.html
@@ -21,5 +21,16 @@
         git push -u origin main
     </code>
     <h1>You can use this code once. next time you can use only git push.</h1>
+
+    <h1>Now some git command.</h1>
+    <code>
+        git pull
+    </code>
+    <code>
+        git fetch 
+    </code>
+    <code>
+        git branch -r
+    </code>
 </body>
 </html>
